2008-07-01  Jorge Gonzalez  <jorge.gonzalez@artica.es>

	* include/help/en/help_plugin_parameters.php,
	include/help/en/help_alert_recovery.php,
	include/help/en/help_prediction_source_module.php,
	include/help/en/help_snmpwalk.php,
	include/help/en/help_alert_type.php,
	include/help/en/help_network_component.php: Added new help pages.

	* include/help/en/help_map_builder.php,
	include/help/en/help_postprocess.php,
	include/help/en/help_recontask.php, include/help/en/help_alerts.php,
	include/help/en/help_manage_alerts.php: modified HTML tag.

	* godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor_prediction.php,
	godmode/agentes/alert_manager_editor.php,
	godmode/agentes/module_manager_editor_data.php,
	godmode/agentes/modificar_agente.php,
	godmode/agentes/agent_manager.php, godmode/alerts/configure_alert.php:
	Added/modified help support.

2008-06-30  Jorge Gonzalez  <jorge.gonzalez@artica.es>

	* include/help/en/help_recontask.php: Added help page for Recon tasks.

	* include/languages/language_en.php: Added some strings.

	* godmode/agentes/module_manager_editor_wmi.php,
	godmode/servers/manage_recontask_form.php: Added support for inline
	help.

	* godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor_data.php: Fixed buggy table,
	modified previously.

2008-06-30  Jorge Gonzalez  <jorge.gonzalez@artica.es>

	* include/styles/pandora.css: Added cursor style for inline help.

	* include/help/en/help_manage_alerts.php: Added help page for Alert
	management.

	* include/help/en/help_snmpcommunity.php: Added help page for SNMP
	community.

	* include/help/en/help_map_builder.php: Added help page for map
	builder.

	* include/help/en/help_postprocess.php: Checked spelling.

	* include/help/en/help_module_type.php: Added help page for Module
	type.

	* include/help/en/help_snmpoid.php: Added help page for SNMP OID.
